[package]
name = "prog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
rand = "0.8.5"

[target.'cfg(unix)'.dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
